# restate-downloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix
.github/workflows/: release.yaml
lib/: Cargo.toml
lib/src/: common.rs  lib.rs  with_store.rs  without_store.rs
